# eventcore

./: .env.example  .github-project  .gitignore  .mergify.yml  .pre-commit-config.yaml  .zellij.kdl  AGENTS.md  ASYNC_TRAIT_MIGRATION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLIANCE_CHECKLIST.md  CONST_GENERICS_DESIGN.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  PERFORMANCE_ISSUES.md  PLANNING.md  PRD_Multi_Stream_Event_Sourcing_Library.md  README.md  RELEASE_PROCESS.md  REVIEW.md  REVIEW_PLAN.md  RUNTIME_TO_COMPILETIME_ANALYSIS.md  SECURITY.md  TESTING.md  TYPE_LEVEL_LISTS_ANALYSIS.md  advanced_type_patterns.md  benchmark_summary.md  build.rs  claude-flow.config.json  docker-compose.yml  dod.yaml  fix_test_files.py  flake.nix  justfile  phantom_type_analysis.md  phantom_type_implementation_plan.md  release-plz.toml  rust-toolchain.toml  (+1 more)
eventcore/: CHANGELOG.md  Cargo.toml  README.md
eventcore-bench/: Cargo.toml
eventcore-bench/benches/: execute.rs  serialization.rs  store_operations.rs
eventcore-bench/src/: lib.rs
eventcore-benchmarks/: Cargo.toml  benchmark_results.txt
eventcore-benchmarks/benches/: command_execution.rs  command_execution.rs.disabled  event_store.rs  memory_profiling.rs  projection_processing.rs  realistic_workloads.rs  simple_command.rs  stream_discovery_profiling.rs.disabled  stream_discovery_simple.rs  stream_validation.rs.disabled  traditional_vs_multistream.rs  validation_optimization_bench.rs
eventcore-benchmarks/src/: lib.rs
eventcore-demo/: Cargo.toml  README.md
eventcore-demo/src/: commands.rs  domain.rs  lib.rs  main.rs  projections.rs
eventcore-demo/tests/: bank_account_test.rs  postgres_e2e_test.rs
eventcore-examples/: CHANGELOG.md  Cargo.toml  README.md  REALTIME_COLLABORATION_README.md
eventcore-examples/src/: axum_integration_example.rs  distributed_ecommerce_example.rs  lib.rs  realtime_collaboration_example.rs  simplified_command_example.rs
eventcore-examples/tests/: doc_accuracy_test.rs  ecommerce_integration_tests.rs  multi_stream_atomic_test.rs  retry_policy_test.rs  scenario_test.rs  single_stream_command_test.rs
eventcore-fs/: CHANGELOG.md  Cargo.toml
eventcore-fs/src/: config.rs  coordination.rs  error.rs  format.rs  index.rs  ingestion.rs  lib.rs  merge.rs  replica.rs
eventcore-fs/tests/: contract_suite_test.rs  git_robustness_test.rs  merge_mode_test.rs  projection_after_merge_test.rs  replica_identity_test.rs
eventcore-integration-tests/: CHANGELOG.md  Cargo.toml
eventcore-integration-tests/examples/: projection_protocol_example.rs  typed_subscription.rs
eventcore-integration-tests/src/: lib.rs
eventcore-integration-tests/tests/: lock_poisoning_recovery.rs  macro_integration_test.rs  performance_regression_suite.rs  performance_target_validation.rs  properties.rs  rebuild_integration_test.rs  serialization_formats_test.rs  simple_retry_test.rs  subscription_typestate_tests.rs
eventcore-macros/: CHANGELOG.md  Cargo.toml  README.md
eventcore-macros/src/: command.rs  lib.rs  stream_set.rs  utils.rs
eventcore-macros/tests/: I-006-command_derive_macro_test.rs  I-013-require_macro_test.rs  command_derive_macro_test.rs  command_macro.rs  derive_command.rs  require_macro_test.rs  trybuild.rs
eventcore-memory/: CHANGELOG.md  Cargo.toml  README.md
eventcore-memory/src/: lib.rs
eventcore-memory/tests/: subscription_reliability.rs
eventcore-postgres/: CHANGELOG.md  Cargo.toml  README.md
eventcore-postgres/benches/: postgres_benchmarks.rs
eventcore-postgres/docs/: prepared-statement-performance.md
eventcore-postgres/migrations/: 0001_create_events_table.sql  0002_add_metadata_column.sql  0003_add_version_trigger.sql  0004_prevent_event_updates.sql  0005_prevent_event_deletes.sql  0006_add_subscription_versions.sql  001_create_event_streams.sql  002_create_events.sql  003_create_performance_indexes.sql  004_create_partitioning_strategy.sql  005_create_simple_schema.sql  006_add_version_check_trigger.sql  007_drop_event_streams_dependency.sql  README.md
eventcore-postgres/src/: circuit_breaker.rs  event_store.rs  lib.rs  monitoring.rs  retry.rs
eventcore-postgres/tests/: atomic_multi_stream_test.rs  batch_append_test.rs  concurrency_retry_test.rs  connection_pool_tests.rs  contract_suite_test.rs  i010_contract_suite_test.rs  i011_observability_test.rs  i012_atomic_multi_stream_test.rs  i013_concurrency_retry_test.rs  i014_postgres_internals_test.rs  integration_tests.rs  multi_stream_gap_detection.rs  observability_test.rs  postgres_internals_test.rs  stream_batching_tests.rs  test_concurrent_bug.rs  test_duplicate_event_id.rs
eventcore-sqlite/: CHANGELOG.md  Cargo.toml  README.md
eventcore-sqlite/src/: lib.rs
eventcore-sqlite/tests/: batch_append_test.rs  bring_your_own_connection_test.rs  contract_suite_test.rs  encrypted_migration_test.rs
eventcore-stress/: Cargo.toml
eventcore-stress/src/: backends.rs  config.rs  domain.rs  main.rs  metrics.rs  runner.rs
eventcore-testing/: CHANGELOG.md  Cargo.toml
eventcore-testing/src/: chaos.rs  contract.rs  deterministic.rs  event_collector.rs  lib.rs  scenario.rs
eventcore-testing/tests/: chaos_mode_test.rs  deterministic_conflict_store_test.rs  event_reader_contract_suite.rs  event_store_contract_suite.rs  operation_name_contract_test.rs  unified_contract_suite_test.rs
eventcore-types/: CHANGELOG.md  Cargo.toml
eventcore-types/src/: command.rs  errors.rs  lib.rs  projection.rs  store.rs  validation.rs
eventcore/examples/: cqrs_rebuild_example.rs  performance_testing_example.rs  resource_lifecycle_example.rs  serialization_formats_example.rs
eventcore/proptest-regressions/: executor.txt  state_reconstruction.txt
eventcore/src/: command.rs  command_old.rs  effects.rs  errors.rs  event.rs  event_store.rs  event_store_adapter.rs  execute_pipeline.rs  executor.rs  lib.rs  macros.rs  metadata.rs  projection.rs  projection_manager.rs  projection_pipeline.rs  projection_protocol.rs  projection_runner.rs  resource.rs  state_reconstruction.rs  store.rs  subscription.rs  subscription_adapter.rs  subscription_typestate.rs  (+3 more)
(+456 files in other folders)
