[workspace]
members = [
    "eventcore",
    "eventcore-examples",
    "eventcore-macros",
    "eventcore-memory",
    "eventcore-postgres",
    "eventcore-sqlite",
    "eventcore-testing",
    "eventcore-types",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jwilger/eventcore"
