[package]
name = "eventcore-benchmarks"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"
description = "Benchmarks for the EventCore multi-stream event sourcing library"

[lints]
workspace = true

[dependencies]
eventcore = { path = "../eventcore", features = ["testing"] }
eventcore-memory = { path = "../eventcore-memory" }
eventcore-postgres = { path = "../eventcore-postgres" }
tokio = { workspace = true }
criterion = { workspace = true, features = ["async_futures"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

[[bench]]
name = "command_execution"
harness = false

[[bench]]
name = "event_store"
harness = false

[[bench]]
name = "projection_processing"
harness = false

[[bench]]
name = "memory_profiling"
harness = false

[[bench]]
name = "stream_validation"
harness = false

[[bench]]
name = "realistic_workloads"
harness = false

[[bench]]
name = "stream_discovery_profiling"
harness = false

[[bench]]
name = "stream_discovery_simple"
harness = false