[package]
name = "eventcore-examples"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Example implementations using EventCore event sourcing library"
publish = false

[dependencies]
# Core dependencies
eventcore = { path = "../eventcore", features = ["testing"] }
eventcore-macros = { path = "../eventcore-macros" }
eventcore-postgres = { path = "../eventcore-postgres" }
eventcore-memory = { path = "../eventcore-memory" }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

# Type safety dependencies
nutype = { workspace = true, features = ["regex"] }
regex = "1.11.1"

# Additional dependencies for examples
rust_decimal = { version = "1.37.0", features = ["serde"] }
rust_decimal_macros = "1.37.0"
anyhow = "1.0.95"
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
insta = { workspace = true }
criterion = { workspace = true }
sqlx = { workspace = true }

[lints]
workspace = true

# Temporarily disabled until Command API migration is complete
# [[example]]
# name = "banking"
# path = "src/banking/main.rs"

# Temporarily disabled until Command API migration is complete  
# [[example]]
# name = "ecommerce"
# path = "src/ecommerce/main.rs"

# Temporarily disabled until Command API migration is complete
# [[example]]
# name = "sagas"
# path = "src/sagas/main.rs"

[[example]]
name = "simplified_command"
path = "src/simplified_command_example.rs"

[[example]]
name = "distributed_ecommerce"
path = "src/distributed_ecommerce_example.rs"

# Temporarily disabled until Command API migration is complete
# [[bench]]
# name = "example_benchmarks"
# harness = false
# path = "src/benchmarks/bench.rs"