[package]
name = "eventcore-examples"
version.workspace = true
edition.workspace = true
description = "Integration tests and example applications for EventCore"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
eventcore = { path = "../eventcore" }
eventcore-macros = { path = "../eventcore-macros" }
eventcore-memory = { path = "../eventcore-memory" }
eventcore-testing = { path = "../eventcore-testing" }
eventcore-types = { path = "../eventcore-types" }
nutype = { version = "0.7.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "time", "sync"] }
uuid = { version = "1.23.1", features = ["v7"] }
