[package]
name = "eventcore-fs"
version.workspace = true
edition.workspace = true
description = "File-based, git-mergeable event store adapter for EventCore"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
eventcore-types = { version = "0.8.2", path = "../eventcore-types" }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", default-features = false, features = ["sync", "rt"] }
tracing = "0.1"
uuid = { version = "1.23.1", features = ["v7", "serde"] }
fs4 = { version = "1.1.0", default-features = false, features = ["sync"] }
nutype = { version = "0.7.0", features = ["serde"] }

[dev-dependencies]
eventcore-testing = { path = "../eventcore-testing" }
tempfile = "3"
tokio = { version = "1.52.1", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
