[package]
name = "eventcore-macros"
version = "0.1.0"
edition = "2021"
authors = ["EventCore Contributors"]
description = "Procedural macros for the EventCore event sourcing library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eventcore/eventcore"
readme = "../README.md"
keywords = ["event-sourcing", "cqrs", "macros", "ddd", "events"]
categories = ["data-structures", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["full", "extra-traits"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"

[dev-dependencies]
eventcore = { path = "../eventcore" }
trybuild = "1.0"