[package]
name = "eventcore-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for the EventCore event sourcing library"
readme = "../README.md"
keywords = ["event-sourcing", "cqrs", "macros", "ddd", "events"]
categories = ["data-structures", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["full", "extra-traits"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"

[dev-dependencies]
eventcore = { path = "../eventcore" }
trybuild = "1.0"