[package]
name = "eventcore-macros"
version = "0.2.1"
edition = "2024"
description = "Procedural macros for EventCore event sourcing library"
license = "MIT"
repository = "https://github.com/jwilger/eventcore"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0"
eventcore = { version = "0.2.0", path = "../eventcore" }
eventcore-memory = { version = "0.2.0", path = "../eventcore-memory" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.19.0", features = ["v7"] }
serde = { version = "1.0", features = ["derive"] }
