[package]
name = "eventcore-memory"
version.workspace = true
edition.workspace = true
description = "In-memory event store adapter for EventCore event sourcing library"
license.workspace = true
repository.workspace = true

[dependencies]
eventcore-types = { version = "0.2.0", path = "../eventcore-types" }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v7"] }

[dev-dependencies]
eventcore-testing = { path = "../eventcore-testing" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
