[package]
name = "eventcore-memory"
version.workspace = true
edition.workspace = true
description = "In-memory event store adapter for EventCore event sourcing library"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
eventcore-types = { version = "0.8.1", path = "../eventcore-types" }
serde_json = "1.0"
thiserror = "2.0.18"
tracing = "0.1"
uuid = { version = "1.23.1", features = ["v7"] }

[dev-dependencies]
eventcore-testing = { path = "../eventcore-testing" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52.1", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
