[package]
name = "eventcore-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
eventcore-types = { path = "../eventcore-types" }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
thiserror = "2.0.17"
tracing = "0.1"
uuid = { version = "1.18.1", features = ["serde", "v7"] }

[dev-dependencies]
eventcore-testing = { path = "../eventcore-testing" }
futures = "0.3"
mutants = "0.0.3"
serde = { version = "1.0", features = ["derive"] }
# blocking: Required for contract test suite which uses SyncRunner to avoid tokio runtime conflicts
# reusable-containers: Enables container reuse across test runs via ReuseDirective::Always
testcontainers = { version = "0.26.0", features = ["blocking", "reusable-containers"] }
testcontainers-modules = { version = "0.14.0", features = ["postgres"] }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
