[package]
name = "eventcore-postgres"
version.workspace = true
edition.workspace = true
description = "PostgreSQL event store adapter for EventCore event sourcing library"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
eventcore-types = { version = "0.8.1", path = "../eventcore-types" }
nutype = { version = "0.7.0", features = ["serde"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
thiserror = "2.0.17"
tokio = { version = "1.52.1", default-features = false, features = ["rt-multi-thread"] }
tracing = "0.1"
uuid = { version = "1.23.1", features = ["serde", "v7"] }

[dev-dependencies]
eventcore-testing = { path = "../eventcore-testing" }
futures = "0.3"
mutants = "0.0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52.1", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
