[package]
name = "eventcore-sqlite"
version.workspace = true
edition.workspace = true
description = "SQLite event store adapter for EventCore event sourcing library"
license.workspace = true
repository.workspace = true

[features]
default = ["encryption"]
encryption = ["rusqlite/bundled-sqlcipher-vendored-openssl"]

[dependencies]
eventcore-types = { version = "0.5.1", path = "../eventcore-types" }
rusqlite = { version = "0.32", default-features = false }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false, features = ["sync", "rt"] }
tracing = "0.1"
uuid = { version = "1.19.0", features = ["serde", "v7"] }

[dev-dependencies]
eventcore-testing = { path = "../eventcore-testing" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt-multi-thread"] }
