[package]
name = "eventcore-testing"
version = "0.2.0"
edition = "2024"
description = "Testing utilities and shared test suite for EventCore event stores"
license = "MIT"
repository = "https://github.com/jwilger/eventcore"

[lints.rust]
warnings = "deny"

[dependencies]
eventcore-types = { path = "../eventcore-types" }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v7"] }

[dev-dependencies]
eventcore = { path = "../eventcore" }
eventcore-memory = { path = "../eventcore-memory" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
