[package]
name = "eventcore-testing"
version.workspace = true
edition.workspace = true
description = "Testing utilities and shared test suite for EventCore event stores"
license.workspace = true
repository.workspace = true

[lints.rust]
warnings = "deny"

[dependencies]
eventcore-types = { version = "0.4.0", path = "../eventcore-types" }
nutype = { version = "0.6.2", features = ["serde"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v7"] }

[dev-dependencies]
eventcore = { path = "../eventcore" }
eventcore-memory = { path = "../eventcore-memory" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
