[package]
name = "eventcore-testing"
version.workspace = true
edition.workspace = true
description = "Testing utilities and shared test suite for EventCore event stores"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
eventcore = { version = "0.8.1", path = "../eventcore" }
eventcore-memory = { version = "0.8.1", path = "../eventcore-memory" }
eventcore-types = { version = "0.8.1", path = "../eventcore-types" }
nutype = { version = "0.7.0", features = ["serde"] }
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v7"] }

[dev-dependencies]
eventcore = { path = "../eventcore" }
eventcore-memory = { path = "../eventcore-memory" }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
