[package]
name = "eventcore-types"
version.workspace = true
edition.workspace = true
description = "Shared vocabulary types and traits for EventCore event sourcing library"
license.workspace = true
repository.workspace = true

[lints.rust]
warnings = "deny"

[dependencies]
nutype = { version = "0.6.2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["serde", "v7"] }

[dev-dependencies]
proptest = "1.9.0"
