[package]
name = "eventcore-types"
version.workspace = true
edition.workspace = true
description = "Shared vocabulary types and traits for EventCore event sourcing library"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
futures = "0.3.32"
glob = "0.3.3"
nutype = { version = "0.7.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "2.0.17"
uuid = { version = "1.23.1", features = ["serde", "v7"] }

[dev-dependencies]
proptest = "1.9.0"
tokio = { version = "1.52.1", features = ["macros", "rt"] }
