[package]
name = "eventcore"
version.workspace = true
edition.workspace = true
description = "Type-driven event sourcing library for Rust with atomic multi-stream commands"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["macros"]
macros = ["dep:eventcore-macros"]
postgres = ["dep:eventcore-postgres"]
sqlite = ["dep:eventcore-sqlite"]

[dependencies]
# Core types from shared vocabulary crate
eventcore-types = { version = "0.8.1", path = "../eventcore-types" }

# Runtime dependencies for execute() and retry logic
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.44"
uuid = { version = "1.23.1", features = ["serde", "v1", "v7"] }

# Optional dependency for derive macros (enabled by default)
eventcore-macros = { version = "0.8.1", path = "../eventcore-macros", optional = true }

# Optional dependency for PostgreSQL backend (enabled via feature flag)
eventcore-postgres = { version = "0.8.1", path = "../eventcore-postgres", optional = true }

# Optional dependency for SQLite backend (enabled via feature flag)
eventcore-sqlite = { version = "0.8.1", path = "../eventcore-sqlite", optional = true }

[dev-dependencies]
eventcore-memory = { path = "../eventcore-memory" }
nutype = { version = "0.7.0", features = ["serde"] }
proptest = "1.9.0"
# tracing-mock is only available as beta (official tokio-rs crate); used for testing structured tracing output
tracing-mock = "0.1.0-beta.3"
tracing-test = "0.2.5"
uuid = { version = "1.23.1", features = ["v7"] }
